--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,7 @@ h2 {
 body {
   margin: 0;
   padding: 0;
-  /*background: #005aff;*/
   -webkit-font-smoothing: antialiased;
-  /*font-family: 'Varela Round', sans-serif;*/
   height: 100%;
 }
 
@@ -138,17 +136,12 @@ section {
   width: 100%;
   height: 800px;
   box-sizing: border-box;
-  padding: 20px;
   overflow: hidden;
 }
 
 section#home {
   background-color: #005aff;
-  /*background-color: #F0C771;*/
   margin-top: 70px;
-  /*max-width: 615px;*/
-  /*margin: 40px auto;*/
-  /*font-family: "Montserrat", sans-serif;*/
   line-height: 1.6;
   color: #fff;
 }
@@ -156,7 +149,7 @@ section#about {
   background-color: #008000;
   color: #FDFCFB;
 }
-section#podcasts { background-color: #ffa500; }
+section#podcasts { background-color: #ffa500; padding-top: 70px; }
 section#contact { background-color: #800080; }
 
 section h2 {
@@ -214,24 +207,9 @@ a:hover {
   padding-bottom: 5rem;
 }
 
-.pulled {}
-
-.pulled ul li {
-  /*font-family: 'Varela Round', sans-serif;*/
-  list-style: none;
-  margin-right: 2rem;
+.rant h1 {
+  color: #aaaab3;
   font-size: 1.8rem;
-}
-
-.pulled h1 {
-  /*font-family: 'Varela Round', sans-serif;*/
-  color: white;
-  font-size: 3rem;
-}
-
-.pulled ul li span{
-  /*font-family: 'Varela Round', sans-serif;*/
-  font-size:1.2rem;
 }
 
 /*social-menu*/
@@ -324,8 +302,9 @@ input[type="checkbox"]{display:none;}
 	border-top: 20px solid #3B5998;
 }
 
-.social li[class*="twitter"] {background:#6CDFEA;padding:12px 0;}
+.social li[class*="twitter"] {background:#2fc2ef;padding:12px 0;}
 .social li[class*="gplus"] {background:#E34429;padding:12px 0;}
+.social li[class*="pinterest"] {background:#E34429;padding:12px 0;}
 
 /*blog-post*/
 
@@ -338,7 +317,7 @@ input[type="checkbox"]{display:none;}
 .box{
   /*z-index: 6;*/
   display: block;
-  width: 250px;
+  width: 200px;
   height: 200px;
   position: relative;
   overflow: hidden;
@@ -359,7 +338,6 @@ input[type="checkbox"]{display:none;}
   padding: 1em;
   color: #fff;
   overflow: hidden;
-  /*text-shadow: 1px 1px 0px #000;*/
 }
 .cover .title{
   font-size: 16pt;
