took animation (particles) out.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -304,7 +304,7 @@ input[type="checkbox"]{display:none;}
 
 .social li[class*="twitter"] {background:#2fc2ef;padding:12px 0;}
 .social li[class*="gplus"] {background:#E34429;padding:12px 0;}
-.social li[class*="pinterest"] {background:#E34429;padding:12px 0;}
+.social li[class*="linkedin"] {background:#0177b5;padding:12px 0;}
 
 /*blog-post*/
 
